--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
   build:
     name: Build & Test
     strategy:
+      fail-fast: false
       matrix:
         os:
           - ubuntu-latest
