--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,38 +14,34 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        os:
+          - ubuntu-latest
         script:
-          [
-            "000.sh",
-            "001.sh",
-            "002.sh",
-            "003.sh",
-            "004.sh",
-            "005.sh",
-            "006.sh",
-            "007.sh",
-            "008.sh",
-            "009.sh",
-            "010.sh",
-            "011.sh",
-            "012.sh",
-            "013.sh",
-            "014.sh",
-            "015.sh",
-          ]
+          - 000.sh
+          - 001.sh
+          - 002.sh
+          - 003.sh
+          - 004.sh
+          - 005.sh
+          - 006.sh
+          - 007.sh
+          - 008.sh
+          - 009.sh
+          - 010.sh
+          - 011.sh
+          - 012.sh
+          - 013.sh
+          - 014.sh
+          - 015.sh
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
       - name: Setup Node.js
-        uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af # v4
+        uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af
         with:
           node-version: 20
-
       - name: Run Installation
         run: ./${{ matrix.script }}
-
       - name: List Installation Results
         run: |
           set -x
