--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,26 +14,27 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os:
-          - ubuntu-latest
+        os: [ubuntu-latest]
         script:
-          - 000.sh
-          - 001.sh
-          - 002.sh
-          - 003.sh
-          - 004.sh
-          - 005.sh
-          - 006.sh
-          - 007.sh
-          - 008.sh
-          - 009.sh
-          - 010.sh
-          - 011.sh
-          - 012.sh
-          - 013.sh
-          - 014.sh
-          - 015.sh
-    runs-on: ${{ matrix.os }}
+          [
+            "000.sh",
+            "001.sh",
+            "002.sh",
+            "003.sh",
+            "004.sh",
+            "005.sh",
+            "006.sh",
+            "007.sh",
+            "008.sh",
+            "009.sh",
+            "010.sh",
+            "011.sh",
+            "012.sh",
+            "013.sh",
+            "014.sh",
+            "015.sh",
+          ]
+    runs-on: ${ matrix.os }
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
       - name: Setup Node.js
@@ -45,7 +46,7 @@ jobs:
       - name: Make scripts executable
         run: chmod +x *.sh
       - name: Run Installation
-        run: ./${{ matrix.script }}
+        run: ./${ matrix.script }
       - name: List Installation Results
         run: |
           set -x
