--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,52 +2,54 @@ name: Build & Test
 "on":
   push:
     branches:
-      - "*"
+    - '*'
   pull_request:
     branches:
-      - "*"
+    - '*'
   schedule:
-    - cron: 01 13 * * SAT
+  - cron: 01 13 * * SAT
+concurrency:
+  group: ${ github.workflow }-${ github.ref }
+  cancel-in-progress: false
 jobs:
   build:
     name: Build & Test
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        os:
+        - ubuntu-latest
         script:
-          [
-            "000.sh",
-            "001.sh",
-            "002.sh",
-            "003.sh",
-            "004.sh",
-            "005.sh",
-            "006.sh",
-            "007.sh",
-            "008.sh",
-            "009.sh",
-            "010.sh",
-            "011.sh",
-            "012.sh",
-            "013.sh",
-            "014.sh",
-            "015.sh",
-          ]
+        - 000.sh
+        - 001.sh
+        - 002.sh
+        - 003.sh
+        - 004.sh
+        - 005.sh
+        - 006.sh
+        - 007.sh
+        - 008.sh
+        - 009.sh
+        - 010.sh
+        - 011.sh
+        - 012.sh
+        - 013.sh
+        - 014.sh
+        - 015.sh
     runs-on: ${ matrix.os }
     steps:
-      - uses: actions/checkout@cbb722410c2e876e24abbe8de2cc27693e501dcb
-      - name: Setup Node.js
-        uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af
-        with:
-          node-version: 20
-      - name: Run Installation
-        run: ./${ matrix.script }
-      - name: List Installation Results
-        run: |
-          set -x
-          cd t
-          ls -la
-          cat package.json
-          [[ -f "playwright.config.ts" ]] && cat playwright.config.ts || true
-          [[ -f "tsconfig.json" ]] && cat tsconfig.json || true
+    - uses: actions/checkout@cbb722410c2e876e24abbe8de2cc27693e501dcb
+    - name: Setup Node.js
+      uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af
+      with:
+        node-version: 20
+    - name: Run Installation
+      run: ./${ matrix.script }
+    - name: List Installation Results
+      run: |
+        set -x
+        cd t
+        ls -la
+        cat package.json
+        [[ -f "playwright.config.ts" ]] && cat playwright.config.ts || true
+        [[ -f "tsconfig.json" ]] && cat tsconfig.json || true
