--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,43 +8,49 @@ name: Build & Test
       - "*"
   schedule:
     - cron: 01 13 * * SAT
+
 concurrency:
-  group: ${ github.workflow }-${ github.ref }
+  group: ${{ '{' }} github.workflow }-${{ '{' }} github.ref }
   cancel-in-progress: false
+
 jobs:
   build:
     name: Build & Test
     strategy:
       fail-fast: false
       matrix:
-        os:
-          - ubuntu-latest
+        os: [ubuntu-latest]
         script:
-          - 000.sh
-          - 001.sh
-          - 002.sh
-          - 003.sh
-          - 004.sh
-          - 005.sh
-          - 006.sh
-          - 007.sh
-          - 008.sh
-          - 009.sh
-          - 010.sh
-          - 011.sh
-          - 012.sh
-          - 013.sh
-          - 014.sh
-          - 015.sh
-    runs-on: ${ matrix.os }
+          [
+            "000.sh",
+            "001.sh",
+            "002.sh",
+            "003.sh",
+            "004.sh",
+            "005.sh",
+            "006.sh",
+            "007.sh",
+            "008.sh",
+            "009.sh",
+            "010.sh",
+            "011.sh",
+            "012.sh",
+            "013.sh",
+            "014.sh",
+            "015.sh",
+          ]
+    runs-on: ${{ '{' }} matrix.os }
+    concurrency:
+      group: build-${{ '{' }} github.ref }-${{ '{' }} matrix.script }
+      cancel-in-progress: false
     steps:
-      - uses: actions/checkout@cbb722410c2e876e24abbe8de2cc27693e501dcb
+      - uses: actions/checkout@v4
       - name: Setup Node.js
-        uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af
+        uses: actions/setup-node@v4
         with:
           node-version: 20
       - name: Run Installation
-        run: ./${ matrix.script }
+        run: ./${{ '{' }} matrix.script }
       - name: List Installation Results
         run: |
           set -x
