--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,8 @@ jobs:
         uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af
         with:
           node-version: 20
+      - name: Generate Scripts
+        run: python3 generate.py
       - name: Make scripts executable
         run: chmod +x *.sh
       - name: Run Installation
